--- a/wpak-left-drawer-android/css/post-detail.css
+++ b/wpak-left-drawer-android/css/post-detail.css
@@ -1,7 +1,5 @@
 /* Containers */
 
-/* TODO : handling default img when offline */
-
 .single-template {padding-top:0;}
 
 .single-content {
@@ -196,7 +194,7 @@
 }
 
 .single-template .post-thumbnail {
-	background:url(../img/img-icon.svg);  /* Never applied as inline style got it before / TODO : apply inline style only if online */
+	background:url(../img/img-icon.svg);
 	background-color:#dddddd;
 	height:200px;
 	background-size:cover;
