--- a/wpak-tabs-ios/css/custom.css
+++ b/wpak-tabs-ios/css/custom.css
@@ -1,7 +1,26 @@
+/**
+ * common.css : general rules (applied to all templates)
+ * custom.css : os specific rules (applied to all templates)
+ * post-detail.css : single.html and page.html specific rules
+ * post-list.css : archive.html specific rules
+ */
+
+
+
+/**
+ * @desc General screen rules
+ */
+
 body {
 	background-color:#182C36;
 	font-family:"HelveticaNeue", sans-serif;
 }
+
+
+
+/**
+ * @desc App's structure
+ */
 
 .header {
 	background-color:#F8F8F8;
@@ -11,7 +30,14 @@ body {
 .tab-bar {
 	background-color:#F8F8F8;
 	border-top:1px #B2B2B2 solid;
+    -webkit-tap-highlight-color:rgba(0,0,0,0); /* No highlight when tabs are tapped */
 }
+
+
+
+/**
+ * @desc Header's elements
+ */
 
 .message {
 	background-color:#ff5555;
@@ -36,7 +62,11 @@ body {
 	font-family:HelveticaNeue-Medium,sans-serif;
 }
 
-/* Post List */
+
+
+/**
+ * @desc Post list
+ */
 
 .list-template .list-title {
 	font-family:HelveticaNeue-Medium,sans-serif;
@@ -50,7 +80,11 @@ body {
 	font-family:HelveticaNeue-Medium,sans-serif;	
 }
 
-/* Post Detail */
+
+
+/**
+ * @desc Post/page detail
+ */
 
 .single-template {
 	font-family:HelveticaNeue-Light,sans-serif;
@@ -108,7 +142,29 @@ body {
 	font-family:HelveticaNeue-Medium;	
 }
 
-/* Back Button */
+
+
+/**
+ * @desc Buttons
+ */
+
+/* Button animation when pressed */
+.button-tap-on {
+	opacity:0.1;
+	-webkit-transition:opacity 0.1s linear;
+}
+
+/* Button animation when unpressed */
+.button-tap-off {
+	opacity:1;
+	-webkit-transition:opacity 0.1s linear;
+}
+
+
+
+/**
+ * @desc Back button
+ */
 
 .back-button {
 	position:absolute;
@@ -120,12 +176,69 @@ body {
 	height:50px;
 }
 
-.button-tap-on {
-	opacity:0.1;
-	-webkit-transition:opacity 0.1s linear;
+
+
+/**
+ * @desc Tabs
+ */
+
+.tab {
+    background-repeat:no-repeat;
+	background-position:center 7px;
+    background-size:50% 50%;
+    font-family:HelveticaNeue,sans-serif;
+    font-size:8px;
+    text-align:center;
+    padding-top:37px;
+    text-decoration:none;
 }
 
-.button-tap-off {
-	opacity:1;
-	-webkit-transition:opacity 0.1s linear;
+.tab-1-icon-off- {
+    background-image:url(../img/tab-1-off-icon.svg);
+    color:#b2b2b2;
+}
+
+.tab-1-icon-on- {
+    background-image:url(../img/tab-1-on-icon.svg);
+    color:#007aff;
+}
+
+.tab-2-icon-off- {
+    background-image:url(../img/tab-2-off-icon.svg);
+    color:#b2b2b2;
+}
+
+.tab-2-icon-on- {
+    background-image:url(../img/tab-2-on-icon.svg);
+    color:#007aff;
+}
+
+.tab-3-icon-off- {
+    background-image:url(../img/tab-3-off-icon.svg);
+    color:#b2b2b2;
+}
+
+.tab-3-icon-on- {
+    background-image:url(../img/tab-3-on-icon.svg);
+    color:#007aff;
+}
+
+.tab-4-icon-off- {
+    background-image:url(../img/tab-4-off-icon.svg);
+    color:#b2b2b2;
+}
+
+.tab-4-icon-on- {
+    background-image:url(../img/tab-4-on-icon.svg);
+    color:#007aff;
+}
+
+.tab-5-icon-off- {
+    background-image:url(../img/tab-5-off-icon.svg);
+    color:#b2b2b2;
+}
+
+.tab-5-icon-on- {
+    background-image:url(../img/tab-5-on-icon.svg);
+    color:#007aff;
 }
